<resources>
    <string name="app_name">taskMaster</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="state" />
    <string name="body" />
    <string name="title" />
    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>

    </string-array>
    <string name="channel_name">TASKKKKKMASSSTEERRR</string>
    <string name="channel_description">Notifications for TASKKKKKMASSSTEERRR</string>
</resources>